# cargo-features = ["profile-rustflags"]
[workspace]
members = [
    "azurite_cli",
    "azurite_compiler",
    "azurite_runtime",
    "azurite_common",
    "crates/azurite_archiver",
]

[profile.release]
debug = true
# panic = "abort"
# lto = true
# codegen-units = 1
# strip = true


[profile.test]
incremental = true