# cargo-features = ["profile-rustflags"]
[workspace]
members = [
    "azurite_cli",
    "azurite_installer",
    "azurite_compiler",
    "azurite_compiler/common",
    "azurite_compiler/azurite_lexer",
    "azurite_compiler/azurite_parser",
    "azurite_compiler/azurite_semantic_analysis",
    "azurite_compiler/azurite_ast_to_ir",
    "azurite_compiler/azurite_errors",
    "azurite_compiler/azurite_codegen",
    "azurite_runtime",
    "azurite_common",

    "afl",
    "crates/azurite_archiver",

    
    # "builtin_libraries/standard_library",
    "builtin_libraries/standard_library",
    "builtin_libraries/rng_library",
]

[profile.release]
# panic = "abort"
# lto = true
# codegen-units = 1
# strip = true
debug = true


[profile.dev]
incremental = true

[profile.test]
incremental = true
