[package]
name = "afl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
azurite_compiler = { path = "../azurite_compiler" }
azurite_archiver = { path = "../crates/azurite_archiver" }
azurite_runtime = { path = "../azurite_runtime" }