[package]
name = "azurite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azurite_common = { path = "../azurite_common" }
azurite_compiler = { path = "../azurite_compiler" }
azurite_runtime = { path = "../azurite_runtime" }
azurite_archiver = { path = "../crates/azurite_archiver" }
# zip = { version = "0.6.4", default-features = false }
colored = "*"
