[package]
name = "azurite_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
hotspot = []
bytecode = []
stack = []
objects = []
afl = []

[dependencies]
azurite_common = { path = "../azurite_common" }
azurite_archiver = { path = "../crates/azurite_archiver" }
colored = "*"
fxhash = "*"
rand = "*"
rayon = "*"
# zip = { version = "0.6.4", default-features = false }

# [[bench]]
# name = "benchmark"
# harness = false
