[package]
name = "azurite_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azurite_common = { path = "../azurite_common" }
azurite_archiver = { path = "../crates/azurite_archiver" }

untyped-arena = "*"
libloading = "*"
colored = "*"
rayon = "*"
lazy_static = "*"

[features]
afl = []