[package]
name = "azurite_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azurite_ast_to_ir = { path = "../azurite_ast_to_ir" }
azurite_common = { path = "../../azurite_common"}
common = { path = "../common" }